<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sales"
        android:icon="@mipmap/ic_shopping_cart_black_24dp"
        android:title="@string/title_sales" />

    <item
        android:id="@+id/navigation_products"
        android:icon="@mipmap/ic_store_mall_directory_black_24dp"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_customers"
        android:icon="@mipmap/ic_person_pin_circle_black_24dp"
        android:title="@string/title_customers" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/ic_person_black_24dp"
        android:title="@string/title_profile" />

</menu>
