<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusableInTouchMode="true">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginTop="@dimen/half_half_general_margin">
        <EditText
            android:id="@+id/form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_customer_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_form_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin">
        <EditText
            android:id="@+id/form_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_customer_surname"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_form_nit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginTop="@dimen/half_half_general_margin">
        <EditText
            android:id="@+id/form_nit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_customer_nit"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginTop="@dimen/half_half_general_margin">
        <EditText
            android:id="@+id/form_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_customer_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginTop="@dimen/half_half_general_margin">
        <EditText
            android:id="@+id/form_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_customer_address"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginTop="@dimen/half_half_general_margin">
        <EditText
            android:id="@+id/form_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_customer_phone"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginTop="@dimen/half_half_general_margin">
        <EditText
            android:id="@+id/form_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_customer_note"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>