<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CreateSaleActivity"
    android:focusableInTouchMode="true">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/general_margin"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginEnd="@dimen/general_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_sale_type"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/sale_type_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_sale_type_1" />
                <RadioButton
                    android:id="@+id/sale_type_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/general_margin"
                    android:text="@string/form_sale_type_2"
                    android:checked="true"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:baselineAligned="false">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_client"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6">
                    <EditText
                        android:id="@+id/client"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_sale_customer"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">
                    <mehdi.sakout.fancybuttons.FancyButton
                        android:id="@+id/form_search_customer"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/half_half_general_margin"
                        android:paddingTop="20dp"
                        fancy:fb_focusColor="@color/secondary_text"
                        fancy:fb_iconPaddingLeft="0dp"
                        fancy:fb_iconPaddingRight="0dp"
                        fancy:fb_iconResource="@mipmap/ic_search_black_24dp"
                        fancy:fb_radius="64dp"
                        fancy:fb_ghost="true"
                        fancy:fb_text=""/>
                </RelativeLayout>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_months"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/months"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_sale_months"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_anual_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/anual_interest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_sale_anual_interest"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/select_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_sale_date"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/add_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/fab_margin"
                        app:srcCompat="@mipmap/ic_add_shopping_cart_white_24dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sale_total_title"
                        android:textColor="@color/primaryText"/>
                    <TextView
                        android:id="@+id/sale_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sale_total"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/accounts"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/fab_margin"
                        app:srcCompat="@mipmap/ic_account_balance_wallet_white_24dp" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_sale_products"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/create_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@mipmap/ic_check_white_24dp" />
</android.support.design.widget.CoordinatorLayout>