<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="@dimen/general_margin"
    android:layout_marginRight="@dimen/general_margin"
    android:layout_marginTop="2dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="6dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false"
    app:contentPadding="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/cover"
            android:layout_width="152dp"
            android:layout_height="230dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/half_half_general_margin"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primaryText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/card_product_authors"
                android:textColor="@color/primaryText"/>
            <TextView
                android:id="@+id/authors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/card_product_genres"
                android:textColor="@color/primaryText"/>
            <TextView
                android:id="@+id/genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/card_product_publishers"
                android:textColor="@color/primaryText"/>
            <TextView
                android:id="@+id/publishers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/card_product_types"
                        android:textColor="@color/primaryText"/>
                    <TextView
                        android:id="@+id/types"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <mehdi.sakout.fancybuttons.FancyButton
                        android:id="@+id/share_btn"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:paddingTop="2dp"
                        fancy:fb_borderColor="@color/primaryText"
                        fancy:fb_borderWidth="0dp"
                        fancy:fb_focusColor="@color/secondary_text"
                        fancy:fb_iconPosition="left"
                        fancy:fb_ghost="true"
                        fancy:fb_text=""
                        fancy:fb_radius="25dp"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>